feat: creation page register

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,3 +1,5 @@
+/* Configuration initial */
+
 * {
   font-family: Helvetica, sans-serif;
   padding: 0;
@@ -5,6 +7,8 @@
   background-color: #222;
   color: #fff;
 }
+
+/* Header */
 
 #logo img {
   height: 40px;
@@ -40,10 +44,76 @@
   color: #f6982d;
 }
 
+/* Container */
 .container-home {
   min-height: 80vh;
   padding: 2em;
 }
+
+/* Login e Register */
+.auth-container {
+  max-width: 450px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.auth-container h2 {
+  margin-bottom: 2em;
+  color: #fff;
+  border-left: 4px solid #f6982d;
+  padding: 0.3em;
+  width: 100px;
+}
+
+.auth-container a {
+  color: #f6982d;
+}
+
+.auth-container p {
+  text-align: right;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+}
+
+.form label {
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+
+.form input,
+.form textarea {
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #f6982d;
+}
+
+form input[type="submit"],
+.btn {
+  background-color: transparent;
+  color: #f6982d;
+  width: 180px;
+  height: 40px;
+  border: 2px solid #f6982d;
+  font-weight: bold;
+  margin-bottom: 1em;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+form input[type="submit"]:hover,
+.btn:hover {
+  background-color: #f6982d;
+  color: #fff;
+}
+
+/* Footer */
 
 footer {
   height: 115px;
