--- a/src/views/auth/register.handlebars
+++ b/src/views/auth/register.handlebars
@@ -15,8 +15,8 @@
       <input type="password" name="password" placeholder="Digite seu password" required>
     </div>
     <div class="form">
-      <label for="confirme-password">Confirme sua senha:</label>
-      <input type="confirme-password" name="confirme-password" placeholder="Confirme sua senha" required>
+      <label for="confirmePassword">Confirme sua senha:</label>
+      <input type="password" name="confirmePassword" placeholder="Confirme sua senha" required>
     </div>
 
     <input type="submit" value="Cadastrar">
