--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -32,6 +32,19 @@
   </nav>
 
   <div class="container-home">
+    <!-- Messagens Flash-->
+    {{#if messages.message}}
+      <div class="message">
+        {{messages.message}}
+      </div>
+    {{/if}}
+
+    {{#if messages.message-success}}
+      <div class="message-success">
+        {{messages.message-success}}
+      </div>
+    {{/if}}
+
     {{{body}}}
   </div>
   
