feat: authenticating in cookie users who register

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -21,13 +21,21 @@
         <a href="/">Pensamentos</a>
       </li>
 
-      <li>
-        <a href="/login">Entrar</a>
-      </li>
-
-      <li>
-        <a href="/register">Registrar</a>
-      </li>
+      {{#if session.userid}}
+         <li>
+          <a href="/toughts-dashboard">Dasboard</a>
+        </li>
+        <li>
+          <a href="/logout">sair</a>
+        </li>
+      {{else}}
+        <li>
+          <a href="/login">Entrar</a>
+        </li>
+        <li>
+          <a href="/register">Registrar</a>
+        </li>
+      {{/if}}
     </ul>
   </nav>
 
