--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -18,6 +18,7 @@
   border: 1px solid red;
   max-width: 400px;
   margin-bottom: 20px;
+  border-radius: 5px;
 }
 
 .message-success {
@@ -29,6 +30,7 @@
   border: 1px solid green;
   max-width: 400px;
   margin-bottom: 20px;
+  border-radius: 5px;
 }
 
 /* Header */
