--- a/src/views/auth/login.handlebars
+++ b/src/views/auth/login.handlebars
@@ -1,1 +1,17 @@
-<h1>login</h1>
+<div class="auth-container">
+  <h2>Entrar</h2>
+
+  <form action="/login" method="post">
+    <div class="form">
+      <label for="email">E-mail:</label>
+      <input type="email" name="email" placeholder="Digite seu e-mail" required>
+    </div>
+    <div class="form">
+      <label for="password">Senha:</label>
+      <input type="password" name="password" placeholder="Digite seu password" required>
+    </div>
+    <input type="submit" value="Entrar">
+
+    <p>Você não tem cadastro? <a href="/register">Clique aqui</a> </p>
+  </form>
+</div>
