--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
 
       {{#if session.userid}}
          <li>
-          <a href="/toughts-dashboard">Dasboard</a>
+          <a href="/toughts/dashboard">Dasboard</a>
         </li>
         <li>
           <a href="/logout">sair</a>
