feat: creating thought and persisting in the database

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
           <a href="/toughts/dashboard">Dasboard</a>
         </li>
         <li>
-          <a href="/logout">sair</a>
+          <a href="/logout">Sair</a>
         </li>
       {{else}}
         <li>
