--- a/src/views/toughts/create.handlebars
+++ b/src/views/toughts/create.handlebars
@@ -2,7 +2,7 @@
   <a href="/toughts/dashboard"></a>
   <h1>Criando um pensamento:</h1>
 
-  <form action="toughts/add" method="post">
+  <form action="/toughts/add" method="post">
     <div class="form">
       <label for="title">Pensamento:</label>
       <input type="text" name="title" placeholder="Digite o seu pensamento">
