--- a/src/views/toughts/dashboard.handlebars
+++ b/src/views/toughts/dashboard.handlebars
@@ -1,7 +1,26 @@
 <div class="dashboard">
   <div class="title-container">
     <h2>Dashboard</h2>
-    <a href="/toughts/add" class="btn-dashboard">Criar Pensamento</a>
+    <a href="/toughts/add" class="btn-dashboard-action">Criar Pensamento</a>
   </div>
   <h3>Seus pensamentos</h3>
+  <ul>
+    {{#each toughts}}
+      <li>
+        <span class="label">
+          {{this.title}}
+        </span>
+
+        <span class="actions">
+         
+          <a href="/" class="btn-dashboard">Editar</a>
+
+          <form action="/">
+            <input type="hidden" name="id" value="{{this.id}}">
+            <input type="submit" value="Excluir">
+          </form>
+        </span>
+      </li>
+    {{/each}}
+  </ul>
 </div>
