--- a/src/views/toughts/dashboard.handlebars
+++ b/src/views/toughts/dashboard.handlebars
@@ -9,6 +9,7 @@
       <li>
         <span class="label">
           {{this.title}}
+         <p class="label-date">{{this.createdAt}}</p>
         </span>
 
         <span class="actions">
