feat: message dashboard empty

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -228,6 +228,12 @@ form input[type="submit"]:hover,
   font-weight: 400;
 }
 
+.button-now {
+  font-size: 18px;
+  font-weight: bold;
+  color: #f6982d;
+}
+
 /* Footer */
 
 footer {
