feat: creation update toughts

--- a/src/views/toughts/dashboard.handlebars
+++ b/src/views/toughts/dashboard.handlebars
@@ -14,7 +14,7 @@
 
         <span class="actions">
          
-          <a href="/" class="btn-dashboard">Editar</a>
+          <a href="/toughts/edit/{{this.id}}" class="btn-dashboard">Editar</a>
 
           <form action="/toughts/remove" method="post">
             <input type="hidden" name="id" value="{{this.id}}">
