--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -234,6 +234,105 @@ form input[type="submit"]:hover,
   color: #f6982d;
 }
 
+/* Home */
+.home-header {
+  display: flex;
+  flex-direction: column;
+  max-width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.home-header h1 {
+  margin-bottom: 1em;
+}
+
+.home-header span {
+  color: #f6982d;
+}
+
+.home-header p,
+.home-header form {
+  margin-bottom: 1.2em;
+}
+
+.home-header input {
+  border: none;
+  border-bottom: 1px solid #fff;
+  padding: 0.5em;
+  margin-right: 1em;
+}
+
+.home-header input[type="text"] {
+  width: 60%;
+}
+
+.home-header input::placeholder {
+  color: #fff;
+}
+
+.order-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 80%;
+  margin: 0 auto 2em;
+}
+
+.order-container span {
+  font-weight: bold;
+  color: #fff;
+}
+
+.order-container form {
+  margin: 0;
+}
+
+.order-container button {
+  margin-bottom: 0;
+  border: none;
+  cursor: pointer;
+  color: #f6982d;
+}
+
+.order-container a {
+  color: #fff;
+  text-decoration: none;
+  color: #f6982d;
+}
+
+.order-container button:hover,
+.order-container a:hover {
+  text-decoration: underline;
+  color: #f6982d;
+}
+
+.order-container button,
+.order-container a {
+  margin: 0 10px;
+}
+
+.home-header figure {
+  border-bottom: 1px solid #333;
+  padding: 0.5em;
+  max-width: 50%;
+  margin: 0 auto 1em;
+}
+
+.home-header blockquote {
+  font-style: italic;
+  font-size: 1.5em;
+  margin-bottom: 0.4em;
+}
+
+.home-header figcaption {
+  text-align: end;
+}
+
+.home-header figcaption span {
+  font-size: 1em;
+}
+
 /* Footer */
 
 footer {
