--- a/src/views/toughts/home.handlebars
+++ b/src/views/toughts/home.handlebars
@@ -20,13 +20,13 @@
     <span>Ordernar por:</span>
     <form action="/" method="GET">
       <input type="hidden" name="search" value="{{this.search}}">
-      <input type="hidden" name="search" value="new">
+      <input type="hidden" name="order" value="new">
       <button type="submit">Novos</button>
     </form>
 
     <form action="/" method="GET">
       <input type="hidden" name="search" value="{{this.search}}">
-      <input type="hidden" name="search" value="old">
+      <input type="hidden" name="order" value="old">
       <button type="submit">Antigos</button>
     </form>
 
